--- a/comparisons.html
+++ b/comparisons.html
@@ -11,10 +11,10 @@
     <title>Jumbotron Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/Users/alex/Desktop/bootstrap-4.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="..css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="../Desktop/bootstrap-4.0.0/docs/4.0/examples/jumbotron/jumbotron.css" rel="stylesheet"> 
+    <link href="..css/jumbotron.css" rel="stylesheet"> 
      
 
 </head>
