--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Jumbotron Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="..css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://github.com/agarett/beer-me-analysis/blob/master/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="..css/jumbotron.css" rel="stylesheet"> 
