--- a/index.html
+++ b/index.html
@@ -10,12 +10,24 @@
 
     <title>Jumbotron Template for Bootstrap</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="https://github.com/agarett/beer-me-analysis/blob/master/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS
+    <link href="https://cdn.rawgit.com/agarett/beer-me-analysis/17876ef5/css/bootstrap.min.css" rel="stylesheet">
+    
 
-    <!-- Custom styles for this template-->
-    <link href="..css/jumbotron.css" rel="stylesheet"> 
+    <!- Custom styles for this template-->
+    <!-- <link href="..css/jumbotron.css" rel="stylesheet">  --> 
      
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+    crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
+    crossorigin="anonymous"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> 
 
 </head>
 
