--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS
-    <link href="https://cdn.rawgit.com/agarett/beer-me-analysis/17876ef5/css/bootstrap.min.css" rel="stylesheet">
-    
-
-    <!- Custom styles for this template-->
-    <!-- <link href="..css/jumbotron.css" rel="stylesheet">  --> 
+    <title>Bootstrap Template</title>
      
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
