--- a/comparisons.html
+++ b/comparisons.html
@@ -79,12 +79,12 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2>A Quick Sample</h2>
-                    <img style="width: 50%; height: 50%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/beer_type_counts.png" alt="Beer Counts Graph">
+                    <img style="width: 50%; height: 50%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs/beer_type_counts.png" alt="Beer Counts Graph">
 
                 </div>
                 <div class="col-md-6">
                     <h2>A Quick Sample</h2>
-                    <img style="width: 50%; height: 50%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/top_international_beer.png" alt="Top International Beers">
+                    <img style="width: 50%; height: 50%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs/top_international_beer.png" alt="Top International Beers">
     
                 </div>
                     
