--- a/comparisons.html
+++ b/comparisons.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2>A Quick Sample</h2>
-                    <img style="width: 25%; height: 25%" src="/graphs/beer_type_counts.png" alt="Beer Counts Graph">
+                    <img style="width: 25%; height: 25%" src="graphs/beer_type_counts.png" alt="Beer Counts Graph">
 
                 </div>
                 <div class="col-md-6">
