edited and added html

--- a/index.html
+++ b/index.html
@@ -3,117 +3,100 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../favicon.ico">
 
     <title>Bootstrap Template</title>
-     
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-    crossorigin="anonymous">
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
 
     <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
 
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!-- Brand -->
+        <a class="navbar-brand" href="https://agarett.github.io/beer-me-analysis/">Home</a>
 
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Data</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link disabled" href="#">Comparisons</a>
-                </li>
-                <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Charts</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Beer Types</a>
-                        <a class="dropdown-item" href="#">USA vs. International</a>
-                        <a class="dropdown-item" href="#">Beer by Country</a>
-                        <a class="dropdown-item" href="#">Beer by State</a>
-                    </div>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
+        <!-- Links -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="https://agarett.github.io/beer-me-analysis/data.html">Data</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://agarett.github.io/beer-me-analysis/comparisons.html">Comparisons</a>
+            </li>
 
-    <main role="main">
-
-        <!-- Main jumbotron for a primary marketing message or call to action -->
-        <div class="jumbotron">
-            <div class="container">
-                <h1 class="display-3">Have a Beer!</h1>
-                <p>This site takes a look at some beer data from
-                    <a href="https://beerme.com/index.php">Beer Me!</a> which has a list of almost 10,000 craft beers from 65 different countries.</p>
-            </div>
-        </div>
-
-        <div class="container">
-            <!-- Example row of columns -->
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>A Quick Sample</h2>
-                    <p>The number of craft beer breweries has spiked over the last decade has spiked in the United States. According
-                        to
-                        <a href="https://www.brewersassociation.org/statistics/number-of-breweries/">Brewers Association</a>, in 2008 there were just over 1,500 craft breweries, but by 2017 that number
-                        had reached over 6,000. However, Beer Revenue has grown at a much smaller rate, and average consumption
-                        per capita has slightly declined in the last several years according to
-                        <a href="https://www.statista.com/outlook/10010000/109/beer/united-states">Statista.</a>
-
-                        <p>This project just wanted to focus on that market through the perspective of one beer connoisseur
-                            from Nebraska, Richard Stueven, who has traveled for over 25 years sampling approximately 10,000
-                            beers from different breweries around the world. Take a look at the data and comparisons above.</p>
-                        <p>
-                            <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-                        </p>
+            <!-- Dropdown -->
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                    Charts
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="https://agarett.github.io/beer-me-analysis/beer_types.html">Beer Types</a>
+                    <a class="dropdown-item" href="https://agarett.github.io/beer-me-analysis/usa_international.html">USA vs. International Beers</a>
+                    <a class="dropdown-item" href="https://agarett.github.io/beer-me-analysis/top_international.html">Beers by Top Countries</a>
+                    <a class="dropdown-item" href="https://agarett.github.io/beer-me-analysis/usa_states.html">Beers by State</a>
                 </div>
-            </div>
+            </li>
+        </ul>
+    </nav>
+</body>
 
-            <hr>
 
+<main role="main">
+
+
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">Have a Beer!</h1>
+            <p>This site takes a look at some beer data from
+                <a href="https://beerme.com/index.php">Beer Me!</a> which has a list of almost 10,000 craft beers from 65 different countries.</p>
         </div>
-        <!-- /container -->
+    </div>
 
-    </main>
+    <div class="container">
 
-    <footer class="container">
-        <p>&copy; Alex Garett 2018</p>
-    </footer>
+        <div class="row">
+            <div class="col-md-12">
+                <h2>A Quick Sample</h2>
+                <p>The number of craft beer breweries has spiked over the last decade has spiked in the United States. According
+                    to
+                    <a href="https://www.brewersassociation.org/statistics/number-of-breweries/">Brewers Association</a>, in 2008 there were just over 1,500 craft breweries, but by 2017 that number
+                    had reached over 6,000. However, Beer Revenue has grown at a much smaller rate, and average consumption
+                    per capita has slightly declined in the last several years according to
+                    <a href="https://www.statista.com/outlook/10010000/109/beer/united-states">Statista.</a>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+                    <p>This project just wanted to focus on that market through the perspective of one beer connoisseur from
+                        Nebraska, Richard Stueven, who has traveled for over 25 years sampling approximately 10,000 beers
+                        from different breweries around the world. Take a look at the data and comparisons above.</p>
+
+            </div>
+        </div>
+
+        <hr>
+
+    </div>
+
+</main>
+
+<footer class="container">
+    <p>&copy; Alex Garett 2018</p>
+</footer>
 
 </body>
 
