--- a/usa_states.html
+++ b/usa_states.html
@@ -64,10 +64,9 @@
 
     <div class="jumbotron">
         <div class="container">
-            <h1 class="display-4">Popular Beer Types</h1>
-            <p>This graph looked at a number of popular beer types and compares the count of each in the dataset. Some of the
-                broader categories, such as "Ale" and "Beer" contained several types of beer such as "Special Beer" or "Summer
-                Ale" that did not fit into more specific categories.
+            <h1 class="display-4">Beers by US State</h1>
+            <p>This graph looked at the number of beers by state. Some of the states had very few beers (sorry West Virginia)
+                or none on this list.
             </p>
         </div>
     </div>
@@ -75,8 +74,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <img style="width: 100%; height: 100%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/beer_type_counts.png?raw=trueg"
-                    alt="Beer Counts by Type ">
+                <img style="width: 100%; height: 100%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/usa_states_beer.png?raw=true"
+                    alt="USA State Beers">
 
             </div>
         </div>
