--- a/beer_types.html
+++ b/beer_types.html
@@ -75,7 +75,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <img style="width: 100%; height: 100%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/beer_type_counts.png?raw=trueg"
+                <img style="width: 75%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/beer_type_counts.png?raw=trueg"
                     alt="Beer Counts by Type ">
 
             </div>
