--- a/usa_states.html
+++ b/usa_states.html
@@ -74,7 +74,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <img style="width: 100%; height: 100%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/usa_states_beer.png?raw=true"
+                <img style="width: 90%;" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/usa_states_beer.png?raw=true"
                     alt="USA State Beers">
 
             </div>
