--- a/comparisons.html
+++ b/comparisons.html
@@ -24,6 +24,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
 
+    <style>
+
+        .top-buffer { 
+            margin-top:50px; 
+            }
+    
+    </style>
+
 </head>
 
 <body>
@@ -68,24 +76,23 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container fluid">
             <!-- Example row of columns -->
             <div class="row">
                 <div class="col-md-6">
-                    <br>
-                    <br>
                     <h3 align="center">Beer Types</h3>
-                    <img style="width: 100%; height: 100%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/beer_type_counts.png?raw=true"
-                        alt="Beer Counts Graph">
+                    <img style="width: 75%;" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/beer_type_counts.png?raw=true"
+                        alt="Beer Counts Graph"> 
+                    <!-- <img class="img-responsive" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/beer_type_counts.png?raw=true"
+                        alt="Beer Counts Graph"> -->
 
                 </div>
 
                 <div class="col-md-6">
-                    <br>
-                    <br>
+
                     <h3 align="center">Top International Countries</h3>
-                    <img style="width: 100%; height: 100%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/top_international_beer.png?raw=true"
-                        alt="Top International Beers">
+                    <img style="width: 75%;" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/top_international_beer.png?raw=true"
+                        alt="Top International Beers"> 
 
                 </div>
 
@@ -94,13 +101,14 @@
             <div class="row">
                 <div class="col-md-6">
                     <h3 align="center">USA vs International Beer</h3>
-                    <img style="width: 100%; height: 100%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/usa_international_beer.png?raw=true"
+                    <img style="width: 75%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/usa_international_beer.png?raw=true"
                         alt="USA beer vs International beer">
+                
 
                 </div>
                 <div class="col-md-6">
                     <h3 align="center">USA State Beers</h3>
-                    <img style="width: 100%; height: 100%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/usa_states_beer.png?raw=true"
+                    <img style="width: 75%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/usa_states_beer.png?raw=true"
                         alt="USA state beers">
 
                 </div>
