--- a/usa_international.html
+++ b/usa_international.html
@@ -73,7 +73,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <img style="width: 100%; height: 100%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/usa_international_beer.png?raw=true"
+                <img style="width: 75%;" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/usa_international_beer.png?raw=true"
                     alt="USA vs International Beers">
 
             </div>
