--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <main role="main">
 
 
-    <div class="jumbotron">
+    <div class="jumbotron p-3">
         <div class="container">
             <h1 class="display-4">Have a Beer!</h1>
             <p>This site takes a look at some beer data from
