--- a/top_international.html
+++ b/top_international.html
@@ -62,7 +62,7 @@
 
 <body>
 
-    <div class="jumbotron">
+    <div class="jumbotron p-3">
         <div class="container">
             <h1 class="display-4">Top Beer Countries</h1>
             <p>This graph looked at countries that had at least 50 beers.
