--- a/usa_international.html
+++ b/usa_international.html
@@ -62,7 +62,7 @@
 
 <body>
 
-    <div class="jumbotron">
+    <div class="jumbotron p-3">
         <div class="container">
             <h1 class="display-4">USA vs. International Beers</h1>
             <p>This graph looked at a number of international beers versus ones from the United States.
