--- a/beer_types.html
+++ b/beer_types.html
@@ -62,7 +62,7 @@
 
 <body>
 
-    <div class="jumbotron">
+    <div class="jumbotron p-3">
         <div class="container">
             <h1 class="display-4">Popular Beer Types</h1>
             <p>This graph looked at a number of popular beer types and compares the count of each in the dataset. Some of the
