--- a/comparisons.html
+++ b/comparisons.html
@@ -69,7 +69,7 @@
 
     <main role="main">
 
-        <div class="jumbotron">
+        <div class="jumbotron p-3">
             <div class="container">
                 <h1 class="display-4">Comparisons</h1>
                 <p>A look at the different visualizations created for this project.
