--- a/data.html
+++ b/data.html
@@ -80,7 +80,7 @@
 
     <main role="main">
 
-        <div class="jumbotron">
+        <div class="jumbotron p-3">
             <div class="container">
                 <h1 class="display-4">Data</h1>
                 <p>Below is a table of the data from
@@ -90,6 +90,7 @@
 
 
         <div style="overflow-x:auto;">
+            
             <table class="table table-bordered table-hover table-condensed">
 
                 <thead>
