--- a/comparisons.html
+++ b/comparisons.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../favicon.ico">
+    <meta name="description" content="Beer Analysis Website">
+    <meta name="author" content="Alex Garett">
 
     <title>Bootstrap Template</title>
 
@@ -109,7 +108,7 @@
                 <div class="col-md-6">
                     <h3 align="center">USA State Beers</h3>
                     <img style="width: 75%" src="https://github.com/agarett/beer-me-analysis/blob/master/graphs%20/usa_states_beer.png?raw=true"
-                        alt="USA state beers">
+                        alt="USA state beers" class="center">
 
                 </div>
             </div>
@@ -121,7 +120,6 @@
         <!-- /container -->
 
     </main>
-    <br>
     <footer class="container">
         <p>&copy; Alex Garett 2018</p>
     </footer>
