--- a/data.html
+++ b/data.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../favicon.ico">
+    <meta name="description" content="Beer Analysis Website">
+    <meta name="author" content="Alex Garett">
 
     <title>Bootstrap Template</title>
 
@@ -89,9 +88,9 @@
         </div>
 
 
-        <div style="overflow-x:auto;">
+        <div style="overflow-x:auto">
             
-            <table class="table table-bordered table-hover table-condensed">
+            <table class="table-bordered table-hover table-condensed">
 
                 <thead>
                     <tr>
