--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../favicon.ico">
+    <meta name="description" content="Beer Analysis Website">
+    <meta name="author" content="Alex Garett">
 
     <title>Bootstrap Template</title>
 
@@ -57,46 +56,46 @@
     </nav>
 </body>
 
+<body>
+    <main role="main">
 
-<main role="main">
 
-
-    <div class="jumbotron p-3">
-        <div class="container">
-            <h1 class="display-4">Have a Beer!</h1>
-            <p>This site takes a look at some beer data from
-                <a href="https://beerme.com/index.php">Beer Me!</a> which has a list of almost 10,000 craft beers from 65 different countries.</p>
-        </div>
-    </div>
-
-    <div class="container">
-
-        <div class="row">
-            <div class="col-md-12">
-                <h2>A Quick Sample</h2>
-                <p>The number of craft beer breweries has spiked over the last decade has spiked in the United States. According
-                    to
-                    <a href="https://www.brewersassociation.org/statistics/number-of-breweries/">Brewers Association</a>, in 2008 there were just over 1,500 craft breweries, but by 2017 that number
-                    had reached over 6,000. However, Beer Revenue has grown at a much smaller rate, and average consumption
-                    per capita has slightly declined in the last several years according to
-                    <a href="https://www.statista.com/outlook/10010000/109/beer/united-states">Statista.</a>
-
-                    <p>This project just wanted to focus on that market through the perspective of one beer connoisseur from
-                        Nebraska, Richard Stueven, who has traveled for over 25 years sampling approximately 10,000 beers
-                        from different breweries around the world. Take a look at the data and comparisons above.</p>
-
+        <div class="jumbotron p-3">
+            <div class="container">
+                <h1 class="display-4">Have a Beer!</h1>
+                <p>This site takes a look at some beer data from
+                    <a href="https://beerme.com/index.php">Beer Me!</a> which has a list of almost 10,000 craft beers from 65 different countries.</p>
             </div>
         </div>
 
-        <hr>
+        <div class="container">
 
-    </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>A Quick Sample</h2>
+                    <p>The number of craft beer breweries has spiked over the last decade has spiked in the United States. According
+                        to
+                        <a href="https://www.brewersassociation.org/statistics/number-of-breweries/">Brewers Association</a>, in 2008 there were just over 1,500 craft breweries, but by 2017 that number
+                        had reached over 6,000. However, Beer Revenue has grown at a much smaller rate, and average consumption
+                        per capita has slightly declined in the last several years according to
+                        <a href="https://www.statista.com/outlook/10010000/109/beer/united-states">Statista.</a>
 
-</main>
+                        <p>This project just wanted to focus on that market through the perspective of one beer connoisseur
+                            from Nebraska, Richard Stueven, who has traveled for over 25 years sampling approximately 10,000
+                            beers from different breweries around the world. Take a look at the data and comparisons above.</p>
 
-<footer class="container">
-    <p>&copy; Alex Garett 2018</p>
-</footer>
+                </div>
+            </div>
+
+            <hr>
+
+        </div>
+
+    </main>
+
+    <footer class="container">
+        <p>&copy; Alex Garett 2018</p>
+    </footer>
 
 </body>
 
