--- a/beer_types.html
+++ b/beer_types.html
@@ -1,16 +1,12 @@
 <!doctype html>
 <html lang="en">
 
-<!doctype html>
-<html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../favicon.ico">
-
+    <meta name="description" content="Beer Analysis Website">
+    <meta name="author" content="Alex Garett">
+    
     <title>Bootstrap Template</title>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
