--- a/usa_states.html
+++ b/usa_states.html
@@ -1,15 +1,11 @@
 <!doctype html>
 <html lang="en">
 
-<!doctype html>
-<html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../favicon.ico">
+    <meta name="description" content="Beer Analysis Website">
+    <meta name="author" content="Alex Garett">
 
     <title>Bootstrap Template</title>
 
