--- a/data.html
+++ b/data.html
@@ -27,7 +27,9 @@
     <style>
         table {
             font-family: arial, sans-serif;
-            border-collapse: collapse;
+            margin: 0 auto;
+            padding: 1rem 0;
+            border-spacing: 0;
         }
 
         td,
@@ -91,7 +93,7 @@
             
             <table class="table-bordered table-hover table-condensed">
 
-                <thead>
+                <thead class="thead-dark">
                     <tr>
                         <th title="Field #1">Brewery_Beer</th>
                         <th title="Field #2">Type_Names</th>
